<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_auto_lock"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_auto_lock"/>
    
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_password"/>
    
<!--     <item -->
<!--         android:id="@+id/action_change_language" -->
<!--         android:orderInCategory="100" -->
<!--         android:showAsAction="never" -->
<!--         android:title="@string/action_change_language"/> -->

</menu>