<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID" />

        <TextView
            android:id="@+id/tvRebateId"
            style="@style/normalfontInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_date" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/tvRebateProduct"
            style="@style/normalfontInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/denomination" />

        <TextView
            android:id="@+id/tvRebateDeno"
            style="@style/normalfontInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rebateType" />

        <TextView
            android:id="@+id/tvRebateType"
            style="@style/normalfontInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rebateRate" />

        <TextView
            android:id="@+id/tvRebateRate"
            style="@style/normalfontInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

</LinearLayout>