<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/lvReportBar"
        layout="@layout/view_layout_navigation_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/edStartDate"
            style="@style/normalfontInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="@string/start_date"
            android:inputType="datetime" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/normalfontBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/edEndDate"
            style="@style/normalfontInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="@string/end_date"
            android:inputType="datetime" >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btnCheckReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="30dp"
        android:textSize="24dp"
        android:text="@string/check_status" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvAgentSalesProduct"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/product_name" >
        </TextView>

        <TextView
            android:id="@+id/tvAgentTotalSales"
            style="@style/gvRightFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.3"
            android:text="@string/total_sales" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lvReport"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".5" >
        </ListView>

        <Button
            android:id="@+id/btnPrintReport"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".1"
            android:text="@string/print_report"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>