<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvRebateDenomination"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/deno" >
        </TextView>

        <TextView
            android:id="@+id/tvRebateRebateType"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/type" >
        </TextView>

        <TextView
            android:id="@+id/tvRebateRebateRate"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/rate" >
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/lvAgentRebateList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    </ListView>

</LinearLayout>