<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvAgentProductId"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/ID"></TextView>

        <TextView
            android:id="@+id/tvAgentProductName"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/product"></TextView>

        <!--         <TextView -->
        <!--             android:id="@+id/tvAgentDiscountType" -->
        <!--             style="@style/gvFontStyle" -->
        <!--             android:layout_width="0dp" -->
        <!--             android:layout_height="wrap_content" -->
        <!--             android:layout_weight="0.3" -->
        <!--             android:text="@string/type" > -->
        <!--         </TextView> -->

        <TextView
            android:id="@+id/tvAgentDiscountRate"
            style="@style/gvFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/rate"></TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/lvAgentProductInfo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"></ListView>

</LinearLayout>