<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="left"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/please_select"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/rounder_border"

        android:text="@string/sendfeedback" />


    <Button
        android:id="@+id/btnFBShare"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/rounder_border"

        android:text="FACEBOOK SHARE AND WIN" />


    <Button
        android:id="@+id/btnRedeem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/rounder_border"

        android:text="@string/qpoints_redemptions" />


    <Button
        android:id="@+id/btnLuckyDraw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/rounder_border"

        android:text="QPoints Lucky Draw" />

    <Button
        android:id="@+id/btnShake"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:background="@drawable/rounder_border"
        android:drawableRight="@drawable/outline_new_releases_black_24"
        android:text="SHAKE AND WIN" />


    <Button
        android:id="@+id/btnQPointShare"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/rounder_border"
        android:text="QPoints SHARE"
        android:visibility="gone" />


</LinearLayout>